# ShareYourIdeasSite

./: .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml  requirements.txt
app/auth/: utils.py
app/database/: config.py  models.py
app/ideas/: endpoints.py  schemas.py
app/repositories/: idea_repository.py  user_repository.py
app/static/js/: auth.js  main_page.js  profile.js
app/static/styles/: auth.css  main_page.css  profile.css
app/templates/: login_form.html  main_page.html  profile.html  register_form.html
app/users/: endpoints.py  schemas.py
docker/: app.sh
logging_app/: logging_utils.py
migrations/: env.py
migrations/versions/: 1baa2b7f059b_update.py  f7303fee7031_first.py
uploads/: 17ea1eaa-a844-46a6-9403-a03a9f4369b3png  1971b200-ef81-45d9-b81d-d637f58fe27cjpg  5725af9c-3b6c-4969-abb8-f7503b65d779jpg  c35283c8-91da-4b18-8fad-cf0f4eb676f5jpg  dcdb5289-87b7-4611-9cbc-cd97a23755b4jpg  e5b92acd-f3c6-4acf-a168-a86c87228a4bjpg  f1982819-8b6e-45bb-928a-8c31054cb317jpg
