[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.masonry.api"

[project]
name = "ShareYourIdeas"
version = "0.1.0"
description = "The website for sharing your creativity"
authors = [{name = "Aleks", email = "a.fokin1@yandex.com"}]
[tool.poetry.dependencies]
python = "^3.12"
    alembic="^1.14.0"
annotated-types="^0.7.0"
anyio="^4.8.0"
asyncpg="^0.30.0"
bcrypt="^4.0.1"
click="^8.1.8"
colorama="^0.4.6"
dnspython="^2.7.0"
ecdsa="^0.19.0"
email_validator="^2.2.0"
fastapi="^0.115.6"
greenlet="^3.1.1"
gunicorn="^23.0.0"
h11="^0.14.0"
idna="^3.10"
Jinja2="^3.1.5"
jose="^1.0.0"
Mako="^1.3.8"
MarkupSafe="^3.0.2"
multipart="^1.2.1"
packaging="^24.2"
passlib="^1.7.4"
psycopg2="^2.9.10"
pyasn1="^0.6.1"
pydantic="^2.10.5"
pydantic-settings="^2.7.1"
pydantic_core="^2.27.2"
python-dotenv="^1.0.1"
python-jose="^3.3.0"
python-multipart="^0.0.20"
pytz="^2024.2"
rsa="^4.9"
six="^1.17.0"
sniffio="^1.3.1"
SQLAlchemy="^2.0.36"
starlette="^0.41.3"
typing_extensions="^4.12.2"
tzdata="^2024.2"
tzlocal="^5.2"
uvicorn="^0.34.0"
